# BattleShip

./: .gitignore  CMakeLists.txt  README.md  installScript
resources/data/: lb
resources/data/saves/: 0  12  123  8  bibos  botBF1  fd  job  kj  klop  klusha  kulak  l  lk  looo  lop  mela  qwerty  sihra  test  trap  trapchik  wukong  yopa  yupi
resources/shaders/: SpriteFragment.glsl  SpriteVertex.glsl  TextureFragment.glsl  TextureVertex.glsl  baseVertex.glsl  textFragment.glsl  textVertex.glsl
src/: main.c
src/game/: ShipBase.c  ShipBase.h  bots.c  bots.h  leaderBoard.c  leaderBoard.h  saveLoad.c  saveLoad.h
src/render/: AnimSprite.c  AnimSprite.h  baseFragment.glsl  baseVertex.glsl  renderUtils.c  renderUtils.h  shader.c  shader.h  sprite.c  sprite.h  text.c  text.h  textures.c  textures.h
src/scenes/: defines.h  freeScenes.c  freeScenes.h  otherScenesUtils.c  otherScenesUtils.h  processingUtils.c  processingUtils.h  scenesInitial.c  scenesInitial.h  scenesRendering.c  scenesRendering.h
